--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/processEdit/hitlistPopup.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/processEdit/hitlistPopup.xhtml
@@ -31,6 +31,7 @@
                 <p:column headerText="#{msgs.treffer}">
                     <p:commandLink value="#{hit.bibliographicCitation}"
                                    action="#{hit.selectClick}"
+                                   onclick="PF('notifications').renderMessage({'summary':'#{msgs.importingData}','detail':'','severity':'info'})"
                                    oncomplete="PF('hitlistDialog').hide()"
                                    update="editForm"
                                    rendered="#{not hit.error}"/>
