Show processes with corresponding flag in select list instead of templates

--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/processFromTemplate/processSearchEdit.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/processFromTemplate/processSearchEdit.xhtml
@@ -26,7 +26,7 @@
                 <p:outputLabel for="processSelect" value="#{msgs.AuswaehlenAusVorhandenenProzessen}"/>
                 <p:selectOneMenu id="processSelect"
                                  value="#{ProzesskopieForm.auswahl}">
-                    <f:selectItems value="#{ProzesskopieForm.prozessTemplates}"/>
+                    <f:selectItems value="#{ProzesskopieForm.processesForChoiceList}"/>
                 </p:selectOneMenu>
             </div>
             <div>
