--- a/Kitodo/src/main/webapp/WEB-INF/resources/css/kitodo.css
+++ b/Kitodo/src/main/webapp/WEB-INF/resources/css/kitodo.css
@@ -888,6 +888,47 @@ main i.fa {
 }
 
 /*----------------------------------------------------------------------
+Metadata Editor
+----------------------------------------------------------------------*/
+
+#metadataEditorWrapper {
+    height: 700px;
+}
+
+.collapsibleWrapper {
+    display: inline-block;
+    height: 100%;
+    box-sizing: border-box;
+    max-width: 30%;
+    vertical-align: top;
+    position: relative;
+    padding: 30px 5px 5px 5px;
+    background: #d8d8d8;
+}
+
+.collapsibleWrapper > button {
+    position: absolute;
+    top: -10px;
+    left: 10px;
+    background: #0071bc;
+    color: #fff;
+    border: solid 1px #fff;
+}
+
+.collapsibleWrapper .columnHeading {
+    position: absolute;
+    top: 20px;
+    left: 10px;
+    font-weight: bold;
+}
+
+.collapsibleWrapper.collapsed .columnHeading {
+    transform: rotate(90deg);
+    top: 25px;
+    left: 5px;
+}
+
+/*----------------------------------------------------------------------
 Footer
 ----------------------------------------------------------------------*/
 
