Include metadata structure data include file into redesigned metadata base html structure

--- a/Kitodo/src/main/webapp/WEB-INF/resources/css/kitodo.css
+++ b/Kitodo/src/main/webapp/WEB-INF/resources/css/kitodo.css
@@ -937,6 +937,22 @@ Metadata Editor
     visibility: hidden;
 }
 
+#structureTreeForm\:actionButtons .ui-panelgrid-cell {
+    padding: 2px;
+}
+
+#structureTreeForm\:actionButtons .ui-button {
+    width: 100%;
+}
+
+.pagination-active {
+    filter: opacity(100%);
+}
+
+.pagination-inactive {
+    filter: opacity(35%);
+}
+
 /*----------------------------------------------------------------------
 Footer
 ----------------------------------------------------------------------*/
