Rename 'taskmanager.xhtml' to 'modules.xhtml' since taskmanager will be just one of possibly multiple loaded modules in the new frontend

--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/header.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/header.xhtml
@@ -109,7 +109,7 @@
 
                             <h:panelGroup rendered="true">
                                 <li class="nav-pic-text"><h:link value="#{msgs.modules}" id="linkModules"
-                                                                 outcome="newTaskManager"><i
+                                                                 outcome="modules"><i
                                     class="fa fa-puzzle-piece fa-lg"/></h:link></li>
                             </h:panelGroup>
 
