--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/metadataEditor/pagination.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/metadataEditor/pagination.xhtml
@@ -50,7 +50,7 @@
     <p:selectBooleanCheckbox id="fictitiousCheckbox"
                              class="input" style="margin-bottom: 0"
                              value="#{Metadaten.fictitious}"/>
-    <p:panel id="paginationStyle">
+    <p:panel id="paginationStyle" style="padding: 0;">
         <p:commandLink update="paginationStyle">
             <p:graphicImage value="/pages/images/buttons/paginierung_seite.svg"
                             styleClass="#{Metadaten.paginationPagesProImage == 1 ? 'pagination-active' : 'pagination-inactive'}"
