Flip 'expand column' button on collapsed columns of metadata editor

--- a/Kitodo/src/main/webapp/WEB-INF/resources/css/kitodo.css
+++ b/Kitodo/src/main/webapp/WEB-INF/resources/css/kitodo.css
@@ -915,6 +915,10 @@ Metadata Editor
     border: solid 1px #fff;
 }
 
+.collapsibleWrapper.collapsed .columnExpandButton {
+    transform: scaleX(-1);
+}
+
 .collapsibleWrapper .columnHeading {
     position: absolute;
     top: 30px;
