--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/processEdit/templateList.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/processEdit/templateList.xhtml
@@ -44,7 +44,7 @@
         </p:column>
     </p:dataTable>
     <p:commandButton id="addTemplateProperty"
-                     value="#{msgs.eigenschaftHinzufuegen}"
+                     value="#{msgs.addTemplateProperty}"
                      actionListener="#{ProzessverwaltungForm.createTemplateProperty}"
                      oncomplete="PF('editTemplateDialog').show()"
                      update="@(.editDialog)"
