--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/processEdit/workpieceList.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/processEdit/workpieceList.xhtml
@@ -43,7 +43,7 @@
         </p:column>
     </p:dataTable>
     <p:commandButton id="addWorkpieceProperty"
-                     value="#{msgs.eigenschaftHinzufuegen}"
+                     value="#{msgs.addWorkpieceProperty}"
                      actionListener="#{ProzessverwaltungForm.createWorkpieceProperty}"
                      update="@(.editDialog)"
                      oncomplete="PF('editWorkpieceDialog').show()"
