--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/processEdit/propertyList.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/processEdit/propertyList.xhtml
@@ -26,7 +26,7 @@
             <h:outputText value="#{item.value}" rendered="#{item.type.name ne 'link'}"/>
             <h:outputLink title="#{item.value}" value="#{item.value}" rendered="#{item.type.name eq 'link'}"/>
         </p:column>
-        <p:column headerText="#{msgs.choice}" styleClass="actionsColumn">
+        <p:column headerText="#{msgs.auswahl}" styleClass="actionsColumn">
             <p:commandLink id="editProperty" title="#{msgs.bearbeiten}"
                            oncomplete="PF('editPropertyDialog').show()"
                            update="@(.editDialog)">
