--- a/Kitodo/src/main/webapp/WEB-INF/resources/css/kitodo.css
+++ b/Kitodo/src/main/webapp/WEB-INF/resources/css/kitodo.css
@@ -899,17 +899,16 @@ Metadata Editor
     display: inline-block;
     height: 100%;
     box-sizing: border-box;
-    max-width: 30%;
     vertical-align: top;
     position: relative;
-    padding: 60px 5px 5px 5px;
+    padding: 60px 0 0 0;
     background: #d8d8d8;
 }
 
 .collapsibleWrapper > button {
     position: absolute;
     top: -10px;
-    left: 17px;
+    left: 8px;
     background: #0071bc;
     color: #fff;
     border: solid 1px #fff;
@@ -929,7 +928,7 @@ Metadata Editor
 .collapsibleWrapper.collapsed .columnHeading {
     transform: rotate(90deg);
     top: -10px;
-    left: 5px;
+    left: 0px;
     width: 200px;
     height: 42px;
     line-height: 42px;
